@@ -132,7 +132,7 @@ module ActiveScaffold::Actions
     end
 
     def marked_records
-      active_scaffold_session_storage[:marked_records] ||= Set.new
+      active_scaffold_session_storage['marked_records'] ||= Set.new
     end
     
     def default_formats
